--- a/projekt_clarusway/css/app.css
+++ b/projekt_clarusway/css/app.css
@@ -7,7 +7,9 @@
   font-size: 1.2rem;
   font-weight: 600;
 }
-
+.navbar .nav-link{
+  transition: color 0.7s;
+}
 .navbar .nav-link:hover{
   color: var(--red);
 }
