--- a/projekt_clarusway/css/app.css
+++ b/projekt_clarusway/css/app.css
@@ -1,21 +1,23 @@
-:root{
-  --red : #dc3545;
+:root {
+  --red: #dc3545;
 }
 /*!---- 1- Navbar ----     -*/
-.navbar .navbar-nav{
-  text-transform:  uppercase;
+.navbar .navbar-nav {
+  text-transform: uppercase;
   font-size: 1.2rem;
   font-weight: 600;
 }
-.navbar .nav-link{
+.navbar .nav-link {
   transition: color 0.7s;
 }
-.navbar .nav-link:hover{
+.navbar .nav-link:hover {
   color: var(--red);
 }
 
-
 /*!---- 2- Carousel ----   -*/
+.carousel-item {
+  max-height: calc(100vh - 88px);
+}
 
 /*!---- 3- About Section   -*/
 
