--- a/projekt_clarusway/css/app.css
+++ b/projekt_clarusway/css/app.css
@@ -19,7 +19,23 @@
   max-height: calc(100vh - 88px);
 }
 
-.carousel-caption 
+.carousel-caption h5{
+  color: var(--red);
+  font-size: 2.4rem;
+  text-shadow: 3px 3px 3px black;
+}
+.carousel-caption p{
+  text-shadow: 3px 3px 3px black;
+  font-weight: 600;
+}
+
+.carousel-caption .btn{
+  width: 7rem;
+}
+
+.carousel-caption{
+  bottom: 5rem;
+}
 
 /*!---- 3- About Section   -*/
 
