--- a/projekt_clarusway/css/app.css
+++ b/projekt_clarusway/css/app.css
@@ -79,11 +79,35 @@ section#instructors i:hover{
 /*!---- 6- Contact Section -*/
 
 /*!---- 7- Footer ----     -*/
-footer i{
+footer  div  i {
     margin-right: 0.8rem;
     transition: color 1s;
     cursor: pointer;
 }
-footer i:hover{
+footer  div  i:hover {
   color: var(--red);
 }
+
+.btn-up {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  color: white;
+  background-color: var(--red);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3rem;
+  text-decoration: none;
+}
+.btn-up:hover {
+  color: black;
+}
+.btn-up:hover i {
+  transform: scale(1.2);
+  font-size: 1.4rem;
+}
+
